# troublescope

./: .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yaml  format.yaml
cmake/modules/: compiler.cmake  go-worker.cmake  plugin-sdk-cpp.cmake  vcpkg.cmake
src/: async.cpp  consts.h  listening.cpp  macros.h  parse.cpp  plugin.cpp  plugin.h  plugin_config.cpp  plugin_config.h  plugin_config_schema.h  proc_diff.cpp  proc_diff.h
vcpkg-custom-triplets/: x64-linux-mixed.cmake
